src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  me: Actor;
}

/** @GQLType */
class User {
  /** @GQLField */
  name: string;
}

/** @GQLInput */
type Entity = {
  description: string;
};

/** @GQLUnion */
type Actor = User | Entity;

-----------------
OUTPUT
-----------------
Error: Union type Actor can only include Object types, it cannot include Entity.:
 --> src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts:19:21

   | /** @GQLUnion */
19 | type Actor = User | Entity;
   |                     ^ 
   | 
